# rust-zero-prod

./: Cargo.toml  Dockerfile  README.md  spec.yaml
.github/workflows/: audit-on-push.yml  rust.yml  scheduled-audit.yml
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
